add new headline

--- a/new.html
+++ b/new.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>This is new reo</h1>
+    <h1>This is new repo</h1>
+    <h2>this is new headline</h2>
 </body>
 </html>
